<?xml version="1.0"?>
<package format="2">
  <name>human_console</name>
  <version>0.1.0</version>
  <description>Uncalibrated Visual Servoing Package</description>
  <maintainer email="laurapetrich@ualberta.ca">lpetrich</maintainer>
  <license>BSD</license>
  <author>lpetrich</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>wam_control</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>catkin_modules</depend>
  <depend>pluginlib</depend>
  
  <depend>geometry_msgs</depend>
  <depend version_gte="0.2.19">python_qt_binding</depend>
  <depend>python-rospkg</depend>
  <depend>rostopic</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>


</package>
